# rust-graphql-ddd

./: Cargo.toml  Makefile  README.md  REFERENCE.md
docker/: compose.yml  devcontainer.json
src/: api.rs  command.rs  infrastructure.rs  main.rs  mutation_root.rs  query.rs  query_root.rs  server.rs
src/api/: app_state.rs  handler.rs
src/command/: command_handler.rs
src/command/interface/: circle_repository_interface.rs
src/domain/: aggregate.rs
src/domain/aggregate/: circle.rs  member.rs  value_object.rs
src/domain/aggregate/value_object/: circle_id.rs  grade.rs  major.rs  member_id.rs
src/infrastructure/: circle_repository.rs  db.rs
src/query/: query_handler.rs
