[package]
name = "rust-graphql-ddd"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.1"
async-graphql-axum = "7.0.1"
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.35.0", features = ["full"] }
anyhow = "1.0.79"
rand = "0.8.4"
serde = "1.0.196"
serde_json = "1.0.113"
async-trait = "0.1.80"